now downloads books from gutenberg

--- a/storygenly/appsettings.json
+++ b/storygenly/appsettings.json
@@ -2,5 +2,9 @@
   "ModelBridge": {
     "BaseUrl": "http://localhost:11434/api/",
     "DefaultModel": "dolphin3:latest"
+  },
+  "Gutenberg": {
+    "DownloadPath": "gutenberg_downloads/",
+    "BaseUrl": "https://gutendex.com/books/"
   }
 }
