--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/Dotnet.gitignore
 
+gutenberg_downloads/
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
