trying to clean up stuff

--- a/storygenly/appsettings.json
+++ b/storygenly/appsettings.json
@@ -5,6 +5,10 @@
   },
   "Gutenberg": {
     "DownloadPath": "gutenberg_downloads/",
-    "BaseUrl": "https://gutendex.com/books/"
+    "BaseUrl": "https://gutendex.com/books/",
+    "DownloadQuery": "?topic=science+fiction"
+  },
+  "VectorDb": {
+    "dbFilePath": "VectorDb.sqlite"
   }
 }
