--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/main/Dotnet.gitignore
 
 gutenberg_downloads/
+*.sqlite
 
 # Build results
 [Dd]ebug/
