--- a/storygenly/appsettings.json
+++ b/storygenly/appsettings.json
@@ -10,5 +10,9 @@
   },
   "VectorDb": {
     "dbFilePath": "VectorDb.sqlite"
+  },
+  "StoryEngine": {
+    "OutputFolder": "output/",
+    "PromptsFolder": "prompts/"
   }
 }
