now generates scens

--- a/storygenly/appsettings.json
+++ b/storygenly/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ModelBridge": {
     "BaseUrl": "http://localhost:11434/api/",
-    "DefaultModel": "dolphin3:latest"
+    "DefaultModel": "gemma3:4b"
   },
   "Gutenberg": {
     "DownloadPath": "gutenberg_downloads/",
