--- a/storygenly/storygenly.csproj
+++ b/storygenly/storygenly.csproj
@@ -17,6 +17,8 @@
     <Content Include="prompts/**/*.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
